--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "eslint": "^7.25.0",
     "js-cookie": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "react": "^17.0.2",
     "react-charts": "*",
     "react-dom": "^17.0.2",
