--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vector-control-system-app",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,8 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "three": "^0.118.3",
+    "three-dxf-loader": "^2.2.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
